# fastapi_and_next_2026_workshop_api

./: .env  README.md  alembic.ini  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 893131744210_new_product.py  aec067bc33b5_first_migrate.py
controllers/: __init__.py  product_controller.py  user_controller.py
libs/: auth.py
models/: Product.py  User.py  __init__.py
schemas/: user.py
